more css bugs squashed

--- a/styles/style.css
+++ b/styles/style.css
@@ -110,8 +110,8 @@
 	text-decoration: none;
 	color: #F2994A;
 	position: relative;
-	left: 280px;
-	top: 20px;
+	left: 410px;
+	top: 40px;
 }
 
 .box-locations {
